ai-services/decision-proxy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: decision-proxy-route
  namespace: decision-proxy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - decision-proxy.crobceratops.ryanbeales.com
    - decision-proxy.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: decision-proxy
          port: 8000
          weight: 1
      timeouts:
        request: 120s
